--- a/templates/osbuild-composer-repo.toml.j2
+++ b/templates/osbuild-composer-repo.toml.j2
@@ -1,11 +1,11 @@
 # {{ ansible_managed }}
-check_gpg = {{ repo['check_gpg'] | to_json }}
-check_ssl = {{ repo['check_ssl'] | to_json }}
+check_gpg = {{ repo['check_gpg'] | default(true) | to_json }}
+check_ssl = {{ repo['check_ssl'] | default(true) | to_json }}
 id = {{ repo['id'] | to_json }}
 name = {{ repo['name'] | to_json }}
 type = {{ repo['type'] | to_json }}
 url = {{ repo['url'] | to_json }}
-rhsm = {{ repo['rhsm'] | to_json }}
+rhsm = {{ repo['rhsm'] | default(false) | to_json }}
 
 {% if repo['gpgkeys'] is defined %}
 check_repogpg = true
